--- a/SRC/styles.css
+++ b/SRC/styles.css
@@ -15,7 +15,9 @@ input {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
   margin-top: 50px;
   margin-bottom: 20px;
 }
