--- a/SRC/styles.css
+++ b/SRC/styles.css
@@ -14,7 +14,7 @@ input {
   padding: 6px 20px;
 }
 
-h1 {
+.location {
   font-size: 24px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
